Do not produce .gcno file for abstract fns (PR gcov-profile/48463).

gcc/ChangeLog:

2016-08-05  Martin Liska  <mliska@suse.cz>

	PR gcov-profile/48463
	* coverage.c (coverage_begin_function): Ignore functions
	with an abstract origin.